Fix spacing of titlebar columns

--- a/rgd/geodata/static/geodata/css/sass/_base.scss
+++ b/rgd/geodata/static/geodata/css/sass/_base.scss
@@ -104,6 +104,14 @@ h6 {
   color: lighten($primary, 40%);
 }
 
+.icon {
+  &.is-small {
+    .material-icons {
+      font-size: 18px;
+    }
+  }
+}
+
 /* Max Width */
 
 @for $i from 1 through 4 {
